cleanup task - improvement configuration storage