@@ -1,19 +1,24 @@
 package com.evolveum.midpoint.studio.impl.configuration;
 
+import com.intellij.util.xmlb.annotations.OptionTag;
 import com.intellij.util.xmlb.annotations.Tag;
+import com.intellij.util.xmlb.annotations.XCollection;
 
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
-@Tag("objects")
+@Tag("missingRefObjects")
 public class MissingRefObjects implements Serializable {
 
     private List<MissingRefObject> objects;
 
+    @OptionTag(nameAttribute = "")
     private MissingRefAction defaultAction;
 
+    @XCollection(style = XCollection.Style.v2)
     public List<MissingRefObject> getObjects() {
         if (objects == null) {
             objects = new ArrayList<>();
@@ -50,7 +55,7 @@ public class MissingRefObjects implements Serializable {
     public MissingRefObjects copy() {
         MissingRefObjects copy = new MissingRefObjects();
         if (objects != null) {
-            copy.setObjects(objects.stream().map(MissingRefObject::copy).toList());
+            copy.setObjects(objects.stream().map(MissingRefObject::copy).collect(Collectors.toList()));
         }
         copy.setDefaultAction(defaultAction);
         return copy;
